# TurboLoader

./: .gitignore  .gitmodules  .travis.yml  Application.h  Application_Main.h  CLion.xml  CMakeLists.txt  EnvironmentFactory.h  EnvironmentManager.h  EventHandler.h  IRenderer.h  Input.cpp  Model.h  README.md  Renderer.h  TextureLoader.h  __main.cpp  appveyor.yml  build.ps1  clean.sh  colors.txt  debug.frag  debug.vert  frag.glsl  hello_world.lua  main.cpp  msdfgen-test.cpp  platform.h  positions.txt  rebuild.ps1  rebuild.sh  run.ps1  run.sh  shader.cpp  shader.frag  shader.geom  shader.h  shader.vert  shader_program.cpp  shader_program.h  (+1 more)
dependencies/: CMakeLists.txt
dependencies/Glad/: readme.md
dependencies/Glad/include/glad/: glad.h
dependencies/Glad/src/: glad.c
dependencies/cmake/: FindPkgMacros.cmake  FindSDL2.cmake
dependencies/common/Hypodermic/: .gitignore
dependencies/common/Hypodermic/Hypodermic/: Container.h  ContainerBuilder.h  Hypodermic.vcxproj  Hypodermic.vcxproj.filters  RegistrationBuilder.h
dependencies/common/Hypodermic/Hypodermic.Tests/: Hypodermic.Tests.vcxproj  Hypodermic.Tests.vcxproj.filters  main.cpp
dependencies/win/LuaJIT-2.0.4/src/: lua51.exp
lib/: CMakeLists.txt
lib/cmake/: FindFreeImage.cmake
lib/common/msdfgen-1.1/: CMakeLists.txt  Msdfgen.rc  main.cpp  resource.h
lib/common/msdfgen-1.1/core/: Contour.cpp  Shape.cpp  Vector2.cpp  edge-coloring.cpp  edge-segments.cpp  equation-solver.cpp  msdfgen.cpp  render-sdf.cpp  save-bmp.cpp  shape-description.cpp
lib/common/msdfgen-1.1/ext/: import-font.cpp  import-svg.cpp  save-png.cpp
lib/common/msdfgen-1.1/include/: lodepng.h  tinyxml2.h
lib/common/msdfgen-1.1/include/freetype/: freetype.h  ftbbox.h  ftbdf.h  ftbitmap.h  ftcache.h  ftgasp.h  ftglyph.h  ftgxval.h  ftgzip.h  ftimage.h  ftincrem.h  ftlcdfil.h  ftlist.h  ftlzw.h  ftmac.h  ftmm.h  ftmodapi.h  ftotval.h  ftoutln.h  ftpfr.h  ftrender.h  ftsizes.h  ftsnames.h  ftstroke.h  ftsystem.h  fttrigon.h  ftwinfnt.h  t1tables.h  ttnameid.h  tttables.h
lib/common/msdfgen-1.1/include/freetype/config/: ftstdlib.h
lib/common/msdfgen-1.1/lib/: lodepng.cpp  tinyxml2.cpp
lib/common/msdfgen/ext/: import-font.cpp
lib/win/LuaJIT-2.0.4/src/: lua51.lib
res/: debug.frag  debug.vert  gamelist.xml  msdf.frag  msdf.vert
res/extra/: nes-turboloader.pxd  snes-turboloader.pxd
res/shader/: debug.vert  msdf.frag  msdf.vert
scripts/: build.ps1  build.sh  clean.ps1  clean.sh  rebuild.ps1  rebuild.sh  run.ps1  run.sh  setup.ps1  setup.sh  test.ps1  test.sh
src/: Application.h  Application_Builder.h  Application_Main.h  Ecs_Aux.h  Ecs_Component.h  Ecs_Entity.h  Ecs_EntityManager.h  Ecs_System.h  Ecs_SystemTick.h  Ecs_Time.h  EnvironmentFactory.h  EnvironmentManager.h  Environment_Factory.cpp  Environment_Factory.h  Environment_Manager.h  Environment_Manager_SDL_OpenGL.cpp  Environment_Manager_SDL_OpenGL.h  Graphics_MeshManager.h  Graphics_MeshManager_OpenGL.h  Graphics_RenderKey.h  Graphics_Renderer.h  Graphics_Renderer_SDL_OpenGL.cpp  Graphics_Renderer_SDL_OpenGL.h  Graphics_ShaderManager.h  Graphics_ShaderManager_OpenGL.h  Graphics_TextureManager.h  Graphics_TextureManager_OpenGL.h  Gui_Renderer.h  Input.cpp  Input.h  Ioc_Container.h  Math.h  Renderer.h  Resource_Aux.h  Resource_BitmapCollection.h  Resource_BitmapLoader.h  Resource_FontCollection.h  Resource_FontLoader.h  Resource_GuiViewCollection.h  Resource_Handle.h  (+37 more)
